--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>spring6-first</module>
+        <module>spring6-ioc-xml</module>
     </modules>
 
     <properties>
