--- a/pom.xml
+++ b/pom.xml
@@ -48,5 +48,12 @@
             <version>2.19.0</version>
         </dependency>
 
+        <!-- 使用注解 @Resource -->
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
     </dependencies>
 </project>
