--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>spring6-first</module>
         <module>spring6-ioc-xml</module>
         <module>spring6-ioc-annotation</module>
+        <module>spring6-ioc-oneself</module>
     </modules>
 
     <properties>
