--- a/pom.xml
+++ b/pom.xml
@@ -57,5 +57,18 @@
             <version>2.1.1</version>
         </dependency>
 
+        <!--spring aop依赖-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>6.0.4</version>
+        </dependency>
+        <!--spring aspects依赖-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>6.0.4</version>
+        </dependency>
+
     </dependencies>
 </project>
