--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.6.3</version>
+            <version>5.9.0</version>
+        </dependency>
+        <!--整合Junit，spring对junit的支持相关依赖-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>6.0.4</version>
         </dependency>
 
         <!--log4j2的依赖-->
