--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>spring6-ioc-annotation</module>
         <module>spring6-ioc-oneself</module>
         <module>spring6-aop</module>
+        <module>spring6-tx</module>
     </modules>
 
     <properties>
