--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>spring6-ioc-oneself</module>
         <module>spring6-aop</module>
         <module>spring6-tx</module>
+        <module>spring6-validator</module>
     </modules>
 
     <properties>
